Incremental progress * $ /tmp/gradle-source-build/bin/gradle clean check --parallel --max-workers=4 -is